fix: fixed the issue where recommended videos were not removed on smaller screens

--- a/packages/background/public/stop-recommended-videos.css
+++ b/packages/background/public/stop-recommended-videos.css
@@ -1,3 +1,3 @@
-#secondary-inner.style-scope.ytd-watch-flexy {
-  display: none !important;
+#related.style-scope.ytd-watch-flexy {
+	display: none !important;
 }
